fixed creating complaint categories by changing crucial categories
